--- a/CPC/index.html
+++ b/CPC/index.html
@@ -19,10 +19,13 @@
 <!--    <link rel="stylesheet" type="text/css" href="libraries/external/semantic/dist/semantic.min.css">-->
 <!--    <script src="libraries/external/semantic/dist/semantic.min.js"></script>-->
 
-<!--    Semantic UI     -->
-        <script src="/TEPAIV/CPC/libraries/external/jquery-3.1.1.min.js"></script>
-<!--    <link rel="stylesheet" type="text/css" href="libraries/external/semantic/dist/semantic.min.css">-->
-<!--    <script src="libraries/external/semantic/dist/semantic.min.js"></script>-->
+    <!--    JQUERY     -->
+    <script src="/TEPAIV/CPC/libraries/external/jquery-3.1.1.min.js"></script>
+
+    <!--    Semantic UI     -->
+    <!--    NOTE: jQuery must be included before Semantic -->
+    <link rel="stylesheet" type="text/css" href="/TEPAIV/CPC/libraries/external/semantic/dist/semantic.min.css">
+    <script src="/TEPAIV/CPC/libraries/external/semantic/dist/semantic.min.js"></script>
 
 
     <!--    Fomantic UI-->
