Fixed: Unnecessary page break in label `Stroke color`

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -14,11 +14,6 @@
     <!--    Lodash     -->
     <script type="text/javascript" src="/TEPAIV/CPC/libraries/external/lodash.js"></script>
 
-    <!--    Semantic UI     -->
-<!--    <script src="libraries/external/jquery-3.1.1.min.js"></script>-->
-<!--    <link rel="stylesheet" type="text/css" href="libraries/external/semantic/dist/semantic.min.css">-->
-<!--    <script src="libraries/external/semantic/dist/semantic.min.js"></script>-->
-
     <!--    JQUERY     -->
     <script src="/TEPAIV/CPC/libraries/external/jquery-3.1.1.min.js"></script>
 
@@ -558,7 +553,7 @@
 
             <!--<p>ColorScheme</p>-->
             <label for="stroke-color-dropdown" class="preference-control-label">
-                Stroke color:<br>
+                Stroke color
             </label>
             <select class="ui dropdown"
                     id="stroke-color-dropdown"
