Improved: Firefox alert: Non-Chrome alert expanded to include Safari

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -685,12 +685,12 @@
 <script>
 
 
-    if (!navigator.userAgent.includes('Chrome') )
-        alert('It seems like you are viewing this page with a web browser that uses an engine other than Chrome. ' +
+    if ( !navigator.userAgent.includes('Chrome') && !navigator.userAgent.includes('Safari') ) {
+        alert( 'It seems like you are viewing this page with a web browser that uses an engine other than Chrome. ' +
             'Therefore, you may experience issues concerning the sizes of elements (e.g., control panel not fitting ' +
             'the page, and the charts being too large). To fix this, please either zoom out to about 70 percent, or ' +
-            'view in Google Chrome / latest version of Safari / a Chrome-based web browser.')
-
+            'view in Google Chrome / latest version of Safari / a Chrome-based web browser.' )
+    }
 
 
     //// SVG  ////
