Improved: `population` column in COVID-19 data is longer visualized

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -164,7 +164,7 @@
 
                         'COVID-19': {
                             path: '/TEPAIV/CPC/data/covid19/Covid19Geographic-7Countries.csv',
-                            columnsToOmit: ['dateRep', 'day', 'year', 'geoId', 'countryterritoryCode', 'popData2018'],
+                            columnsToOmit: ['dateRep', 'day', 'year', 'geoId', 'countryterritoryCode', 'popData2018', 'population'],
                             columnsToForceAsCategorical: ['month'],
                             height: 750,
                             bgTitle: 'COVID-19 DATASET (APR 11)'
