Minor: App title changed

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>CPC: Select Dataset</title>
+    <title>Faceted Frequency Browser</title>
 
 
     <!--======================== EXTERNAL MODULES ========================-->
