Improved: Instruction text

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -109,9 +109,17 @@
     <div class="preferences-pane">
 
 
-        <h3>Controls</h3>
-        <b>Drilldown:</b> Left click <br>
-        <b>Drilldown and Compare:</b> Shift + Left Click
+        <h3>Instructions</h3>
+        <span>
+            <b>Drilldown</b>: L Click <br>
+        </span>
+        <span>
+            <b>Drilldown and Compare</b>: Shift + L Click
+        </span>
+        <span>
+            <b>Collapse</b>: L Click on panel background
+        </span>
+
 
 
         <h3>Data</h3>
