--- a/CPC/index.html
+++ b/CPC/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Faceted Frequency Browser</title>
 
-
     <!--======================== EXTERNAL MODULES ========================-->
 
     <!--    D3     -->
@@ -44,6 +43,7 @@
 
 
     <!--========================== INTERNAL MODULES ========================-->
+    <script type="text/javascript" src="/TEPAIV/CPC/preferences.js"></script>
     <script type="text/javascript" src="./data/datasets.js"></script>
 
     <script type="text/javascript" src="/TEPAIV/CPC/libraries/utils/arrayUtils.js"></script>
