Refactored: `preferences.js` and 'preferences' object is now `cpcDefaults.js` and `cpcDefaults`

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -43,7 +43,7 @@
 
 
     <!--========================== INTERNAL MODULES ========================-->
-    <script type="text/javascript" src="/TEPAIV/CPC/preferences.js"></script>
+    <script type="text/javascript" src="/TEPAIV/CPC/cpcDefaults.js"></script>
     <script type="text/javascript" src="./data/datasets.js"></script>
 
     <script type="text/javascript" src="/TEPAIV/CPC/libraries/utils/arrayUtils.js"></script>
