Added: `lightgray` color to stroke color dropdown

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -420,6 +420,7 @@
                     onchange="setStrokeColor()"
             >
 
+                <option value="lightgray">Light Gray</option>
                 <option value="white">White</option>
                 <option value="black">Black</option>
 
