Refactored: Rename file `TitanicR_.csv` to `TitanicR.hl.csv`

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -164,7 +164,7 @@
                     const switchDataset = (name) => ({
 
                         'Titanic': {
-                            path: '/TEPAIV/CPC/data/TitanicR_.csv',
+                            path: '/TEPAIV/CPC/data/TitanicR.hl.csv',
                             columnsToOmit: [ 'NAME' ],
                             height: 750,
                             bgTitle: 'TITANIC DATASET'
