Improved: Note on loading time added to COVID-19 dataset dropdown item

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -142,7 +142,7 @@
                 <option value="Mushrooms (8 columns)">Mushrooms (8 columns)</option>
                 <option value="">------------ ↓ New ↓ ------------</option>
                 <option value="Titanic">Titanic (Updated)</option>
-                <option value="COVID-19">COVID-19 (Updated)</option>
+                <option value="COVID-19">COVID-19 (Updated; Large data, ±5s load time)</option>
                 <option value="US Census-Income 1994">US Census-Income 1994</option>
                 <option value="Hair-Eye Color">Hair-Eye Color</option>
                 <option value="UC Berkeley Admissions">UC Berkeley Admissions</option>
