Improved: Title of UCB dataset in the navigator clarified

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -243,7 +243,7 @@
                         'UC Berkeley Admissions': {
                             path: '/TEPAIV/CPC/data/ucb-admissions/UCBAdmissions.hl.csv',
                             height: 750,
-                            bgTitle: 'UC BERKELEY ADMISSIONS'
+                            bgTitle: 'UC BERKELEY APPLICATIONS'
                         },
 
                         'Iris': {
